home on mobile fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,11 +581,11 @@ img {
 .footer__box a {
   color: #a2acbd;
 }
-
+/* 
 @media (min-width: 506px) {
   .home__img img {
-    width: 10vw;
-    height: 10vw;
+    width: 15vw;
+    height: 15vw;
   }
   .home__img {
     bottom: 3rem;
@@ -604,7 +604,7 @@ img {
     display: block;
   }
 }
-
+*/
 @media (min-width: 768px) {
   body {
     margin: 0;
@@ -817,6 +817,7 @@ img {
     width: max-content;
     font-size: 1.3rem;
     margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     margin-left: 0.5rem;
     gap: 0.2rem;
   }
@@ -854,20 +855,22 @@ img {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 8rem; /* space between image and socials */
+    justify-content: space-between;
     width: 100%;
   }
 
   .home__img {
     position: relative; /* remove absolute */
-    margin: 0;
+    margin-right: 1rem;
+    padding-top: 0;
   }
 
   .home__img img {
-    width: 180px;
-    height: 180px;
+    max-width: 100%;
+    height: auto;
     border-radius: 50%;
     object-fit: cover;
+    display: block;
   }
 
   .home__icon {
